src/App.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap");

body * {
  font-family: "Poppins", Georgia, "Times New Roman", Times, serif;
  font-weight: 300;
  color: white;
  background-color: rgb(49, 49, 49);
  perspective: 175px;
}

a {
  text-decoration: none;
}
h1 {
  font-size: 30px;
}

header {
  height: 120px;
  border-bottom: 2px solid #f2f2f2;
  background-color: #ed1d24;
}

footer {
  padding: 10px 0px;
  border-top: 2px solid #f2f2f2;
  height: 150px;
}

header .logo {
  height: 70px;
  cursor: pointer;
}

footer,
footer > div,
footer .copyright {
  background-color: #ed1d24;
  /* border-top: 1px green solid; */
  /* height: 120px; */
}

footer .logo {
  height: 2em;
  cursor: pointer;
}

header > div,
header > div > div {
  background-color: #ed1d24;
}

header button {
  border: 2px solid white;
  border-radius: 15px;
  font-size: 18px;
  font-weight: 150%;
  background-color: #ed1d24;
  color: white;
}

.search {
  margin-top: 2vh;
  width: 100%;
  font-size: 105%;
  color: white;
  border-radius: 10px;
}

main {
  margin-top: 30px;
  min-height: 100vh;
  /* border: 1px solid green; */
}

button:hover {
  cursor: pointer;
}
.container {
  width: 70vw;
  /* border: 1px solid red; */
  margin: auto;
}

.flex {
  display: flex;
  flex-direction: row;
}

.flex-center-center {
  justify-content: center;
  align-items: center;
  /* align-content: center; */
}

.flex-start-start {
  justify-content: flex-start;
  align-items: flex-start;
  /* align-content: center; */
}

.flex-between-center {
  justify-content: space-between;
  align-items: center;
}

.flex-between-start {
  justify-content: space-between;
  align-items: start;
}

.flex-around-start {
  justify-content: space-around;
  align-items: start;
}

.flex-wrap {
  flex-wrap: wrap;
}

.flex-gap-20 {
  gap: 20px;
}

.padding-40-20 {
  padding: 40px 20px;
}

.flip-zone {
  /* border: 1px solid red; */
  width: 200px;
  /* height: 250px; */
  /* height: 291px; */
  aspect-ratio: 0.68728;
  /* transition: transform 10s; */
}

.character-card {
  width: 100%;
  height: 100%;
  border: 1px solid white;
  border-radius: 10px;
  /* padding: 5px; */
  transition: transform 0.25s;
  background-color: black;
  overflow: hidden;
}

.comic-card {
  width: 100%;
  height: 100%;
  border-right: 0px solid white;
  border-bottom: 0px solid white;
  border-left: 8px solid rgb(19, 18, 18);
  /* border-radius: 1px; */
  /* padding: 5px; */
  transition: transform 0.25s;
  background-color: black;
  /* overflow: hidden; */
  position: relative;
}

.flip-zone:hover > .character-card {
  /* transform: rotateY(180deg); */
  transform: rotate3d(0, 1, 0, 180deg);
}
.flip-zone:hover > .comic-card {
  /* transform: rotateY(180deg); */
  transform: rotate3d(0, 1, 0, 180deg);
}

.character-img {
  width: 100%;
  aspect-ratio: 1;
  object-fit: cover;
  /* border: 1px solid white; */
  border-radius: 10%;
  padding: 8px;
  margin: 8px 0;
  background-color: inherit;
  position: top;
}

.comic-img {
  height: 100%;
  object-fit: cover;
  /* border: 1px solid white; */
  border-radius: 10px;
  padding: 2px;
  margin: 8px 0;
}

.flip-info {
  background-color: inherit;
  font-size: 8px;
  float: right;
}

.character-name {
  width: 100%;
  font-size: 12px;
  color: lightgray;
  height: 4em;
  overflow: hidden;
  /* border: 1px solid red; */
  /* border-radius: 10px; */
  text-align: center;
  padding: 12px;
  background-color: inherit;
}

.comic-name {
  width: 100%;
  font-size: 10px;
  color: lightgray;
  height: 3em;
  text-align: center;
  background-color: inherit;
  position: absolute;
  top: 50%;
  left: calc(-50% + 1.2em);
  rotate: -90deg;
  margin: auto auto;
}

.favorite {
  /* font-size: 8px; */
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  width: 30px;
  height: 30px;
  border-radius: 50%;
  border: 1px solid black;
  padding: 2px;
  background-color: lightgray;
  /* color: black; */
  bottom: 2px;
  right: 2px;
  z-index: 2;
  text-align: center;
}
.favorite > i {
  background-color: transparent;
  color: black;
  position: absolute;
}

.link-from-character-to-comics {
  /* font-size: 8px; */
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  width: 30px;
  height: 30px;
  border-radius: 50%;
  border: 1px solid black;
  padding: 2px;
  background-color: lightgray;
  /* color: black; */
  bottom: 2px;
  right: 32px;
  z-index: 2;
  text-align: center;
  cursor: pointer;
}

.link-from-character-to-comics > i {
  background-color: transparent;
  color: black;
  position: absolute;
}

.scale-on-click {
  transform: scale(0);
  border: none;
  border-radius: 50%;
  color: black;
  position: relative;
  background-color: aquamarine;
  bottom: 50%;
  left: 50%;
}

.scale-on-click:focus {
  animation: scale 0.5s;
}

@keyframes scale {
  0% {
    transform: scale(0);
  }
  50% {
    transform: scale(1.3);
  }
  100% {
    transform: scale(1);
  }
}

.character-description {
  /* width: 100%; */
  font-size: 11px;
  font-weight: bolder;
  color: white;
  /* height: 100%; */
  overflow-y: scroll;
  /* border: 1px solid red; */
  /* border-radius: 10px; */
  padding: 8px;
  /* margin: 10px 10px; */
  text-align: justify;
  display: none;
  background-color: rgb(90, 88, 88);
  overflow: scroll;
}

.comic-description {
  width: 100%;
  font-size: 9px;
  color: lightgray;
  height: 100%;
  overflow-y: scroll;
  /* border: 1px solid red; */
  /* border-radius: 10px; */
  padding: 6px;
  /* margin: 10px 10px; */
  text-align: justify;
  display: none;
  background-color: #4d4d4d;
}

.flip-zone:hover .show-on-hover {
  display: block;
  transform: scale(-1, 1);
}

.flip-zone:hover .hide-on-hover {
  display: none;
}

/* React - paginate */
ul.react-paginate {
  margin-bottom: 2rem;
  display: flex;
  flex-direction: row;
  justify-content: center;
  list-style-type: none;
  padding: 0 5rem;
}

ul.react-paginate li a {
  border-radius: 7px;
  padding: 0.1rem 0.6rem;
  border: red 1px solid;
  cursor: pointer;
}
ul.react-paginate li.previous a,
ul.react-paginate li.next a,
ul.react-paginate li.break a {
  border-color: transparent;
}
ul.react-paginate li.selected a {
  background-color: red;
  border-color: transparent;
  color: white;
  min-width: 32px;
}
ul.react-paginate li.disabled a {
  color: grey;
}
ul.react-paginate li.disable,
ul.react-paginate li.disabled a {
  cursor: default;
}
/* React - paginate */

@media (max-width: 768px) {
  .container {
    width: 90vw;
  }

  header {
    height: 70px;
    border-bottom: 2px solid #f2f2f2;
    background-color: #ed1d24;
  }

  header .logo {
    height: 25px;
  }
  header button {
    border: 1px solid white;
    border-radius: 7px;
    font-size: 12px;
    font-weight: 100%;
  }
  footer {
    font-size: 14px;
  }

  footer .logo {
    height: 1em;
  }

  .flip-zone {
    width: 45%;
  }
}

@media (max-width: 480px) {
  header {
    position: sticky;
    position: -webkit-sticky;
    top: 0;
    z-index: 10;
  }
  .button-container {
    gap: 5px;
  }
  footer {
    position: sticky;
    position: -webkit-sticky;
    bottom: 0;
    z-index: 10;
    height: 100%;
    font-size: 11px;
  }
  .flip-zone {
    width: 100%;
  }
}

